[package]
name = "motoko_proc_macro"
version = "0.0.15"
authors = ["Matthew Hammer", "Ryan Vandersmith"]
edition = "2018"
license = "Apache-2.0"
description = "Procedural macros for compile-time Motoko expressions in Rust."
readme = "README.md"
documentation = "https://docs.rs/motoko_proc_macro"
repository = "https://github.com/dfinity/motoko.rs"
categories = ["wasm"]
keywords = ["internet-computer", "motoko", "wasm"]
include = ["src", "Cargo.toml", "LICENSE", "README.md"]

[lib]
name = "motoko_proc_macro"
proc-macro = true

[dependencies]
motoko = { path = "../motoko", version = "0.0.15" }
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
serde = "1.0"

[dev-dependencies]
num-bigint = { version = "0.4.3", features = ["serde"] }
