[package]
name = "motoko_proc_macro"
version = "0.0.21"
authors = ["Matthew Hammer", "Ryan Vandersmith"]
edition = "2018"
license = "Apache-2.0"
description = "Procedural macros for compile-time Motoko expressions in Rust."
readme = "README.md"
documentation = "https://docs.rs/motoko_proc_macro"
repository = "https://github.com/dfinity/motoko.rs"
categories = ["wasm"]
keywords = ["internet-computer", "motoko", "wasm"]
include = ["src", "Cargo.toml", "LICENSE", "README.md"]

[lib]
name = "motoko_proc_macro"
proc-macro = true

[dependencies]
# TODO: set this up as a "workspace dependency"? 
# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#inheriting-a-dependency-from-a-workspace
motoko = { path = "../motoko", version = "0.0.20", default-features = false, features = ["parser"] }
syn = "1.0.100"
quote = "1.0.21"
proc-macro2 = "1.0.44"
serde = "1.0.145"

[dev-dependencies]
num-bigint = { version = "0.4.3", features = ["serde"] }
test-log = "0.2.11"
env_logger = "0.9.0"
